public/css/style.css
/* ... */
.header .repetition
{
/*	float: left;
	margin: 4px 0 0 6px;
	text-transform: uppercase;
	color: #888;
	font-size: 11px;*/
	float: left;
	margin: 0px 0 0 0px;
	text-transform: uppercase;
	color: #FFF;
	font-size: 11px;
	background: #999;
	padding: 4px 8px;
}






.close{background: url(../img/sprite.png) -11px -156px no-repeat;width:22px;height:20px;display:block;position:absolute;right:0;top:0;}
.close:hover, .close:focus, .x-stats:hover, .x-com:hover, .x-addcom:hover{background: url(../img/sprite.png) -11px -187px no-repeat;width:22px;height:20px;display:block;position:absolute;right:0;}


.h-text{width:auto;height:20px;display:block;position:absolute;left:10px;top:2px;color:#fff;font-size:12px;text-decoration:none;text-transform:none;}
.white{background:#fff url(../img/gray-point.gif) repeat-y 46.5% center !important;font-size:16px !important;position:relative;line-height:22px;float:left;width:100%;}
.percentuage{display:none;line-height:180%;height:20px;width:auto;text-align:center;width:25px;top:-9px;position:absolute;left:46.8%;color:#fff;font-size:11px;text-decoraton:none;font-weight:bold;text-decoration:none;cursor:default;padding:0 10px;}
/*
.editor .percentuage{display:block !important;}
*/
section .header .context
{
	display: none;
	float: left;
	color: #666;
	text-decoration: none;
	margin: 3px 0 0 10px;
}
	section.has-reference .header .context
	{
		display: block;
	}
	section .header .context:hover
	{
		color: #000;
	}
.percentuage.visible{display:block !Important}


.greenborder{border-top:2px solid #00a651; background:url(../img/pointgreen.gif) 0 0px no-repeat;}


.orangeborder{border-bottom:2px solid #FF6600;}
.greenborder img{margin:0px 0 0 -2px;position:absolute;}
.smart-suggestion-target{border:2px solid #00a651;-moz-border-radius: 2px;border-radius: 2px;padding:0 5px;-moz-box-shadow: 0 1px 3px #ccc;-webkit-box-shadow: 0 1px 3px #ccc;-webkit-transition: all  100ms ease-in; -moz-transition: all  100ms ease-in;}
.qa{background:#FFCC00;-moz-box-shadow: 0 1px 3px #ccc;-webkit-box-shadow: 0 1px 3px #ccc;padding:0 2px;}
section .text .warning{background:#FFCC00;padding:2px 7px;text-align:center;border:1px solid #333;-moz-border-radius: 2px;border-radius: 2px;
					   -moz-box-shadow: 0 1px 3px #ccc;-webkit-box-shadow: 0 1px 3px #ccc;display:block;position:absolute;bottom:-30px;font-size:12px;font-weight:bold}




.indent {text-indent:-20000px;}
.body .charleft {display:none;}
.text  {overflow:hidden;}
textarea,.editarea{position:relative;z-index:99;}

section.status-new .editarea
{
	text-indent:-20000px;
}
section.status-new.opened .editarea
{
	text-indent:0;
}

section.editor {
z-index: 10000;
}

.source{line-height:30px;padding-top:9px !important;}
.editor .source
{
    padding-top: 4px !important;
    font-size: 18px;
    /*word-wrap: break-word;*/
    /*word-break: normal;*/
}
.grayed-text{color:#4c4c4c;}
.textarea-container{height: inherit;table-layout: fixed;}
.editor .textarea-container{position:relative;width:100%;float:right !important;padding-bottom:5px;}


.text .item,
.white li
{
    width: 45.5%;
    table-layout: fixed;
    float: left;
	/*    margin: 0px 1px 0px 0;*/
	padding: 3px 1%;
    text-align: left;
    list-style: none;
    height: 95%;
    outline: none;
    /*word-wrap: break-word;*/
    /*word-break: break-all;*/
}
.text a{text-decoration:none;color:#000 }



.editarea, .search-editarea, .textarea-container .area
{
	display: inline-block; 
	/*float:right;*/
	width: 100%;
	height:96%;
	line-height:30px;
	min-height: 70px;
	resize: none;
	overflow:hidden;
	margin:2px 0 0px -11px;
	padding:5px;
	color:#4d4d4f;
	border:1px solid transparent;
	-moz-border-radius: 2px;
	border-radius: 2px;
	
    word-break: break-all;
	
    hyphens: auto;
	-moz-hyphens: auto;
	transition: all  50ms ease-in;
	-webkit-transition: all  50ms ease-in;
}

section.readonly,
body.archived section
{
    z-index: 9998;
    background: transparent;
}

section.readonly .text,
body.archived section .text
{
	background: rgba(250,250,250,0.1);
	text-shadow: 0 1px 0 #ccc;
	color: #525252;
	cursor: not-allowed;
	-webkit-box-shadow: inset 0 1px 1px -1px #ccc;
	box-shadow: inset 0 1px 1px -1px #ccc;
    /*color: #fff;*/
}



section.readonly .status-container,
body.archived section .status-container
{
    /*display: none;*/
}



.editarea div:last-child {margin-bottom:-22px !important;}









.editor .editarea
{
	width: 100%;
	height: 96% !important;
	font-size:18px;
	color:#000;
	margin:-2px 0 5px -11px;
	border:1px solid #727272;
	box-shadow: inset 0 1px 2px #ccc;
	-webkit-box-shadow: inset 0 1px 2px #ccc;
    word-break: normal;
/*	-moz-transition:background-color 2s;
	-webkit-transition:background-color 2s !important;
	-o-transition:background-color 2s;
	transition:background-color 2s !important;
	background-color: #fff !important;*/
/*	transition:none;
	-webkit-transition: none;*/

    /*word-break: normal;*/
	/*background-color: transparent;*/
}
.editor.highlighted1 .editarea
{
	background-color: #ffff94;
}

.editor.highlighted2 .editarea
{
	-moz-transition:background-color 1.5s;
	-webkit-transition:background-color 1.5s !important;
	-o-transition:background-color 1.5s;
	transition:background-color 1.5s !important;
	background-color: transparent;
}
/*
section.highlighted1 .editarea
{
	border: 4px solid #0798BC;
}
section.highlighted2 .editarea
{
	-moz-transition: border 1.5s;
	-webkit-transition: border 1.5s !important;
	-o-transition: border 1.5s;
	transition: border 1.5s !important;
	border: 4px solid transparent;
}
*/

section:not(.editor).highlighted1 .editarea {
border-color: #00C1E6;
}
section:not(.editor).highlighted2 .editarea
{
-moz-transition: border-color 3s;
-webkit-transition: border-color 3s !important;
-o-transition: border-color 3s;
transition: border-color 3s !important;
border-color: transparent;
}
/* ... */

